[package]
name = "pine-server"
version = "0.1.0"
authors = ["al3x al3x@al3x.io"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.5"
async-graphql-actix-web = "2.9"
env_logger = "0.8"
git2 = "0.13"
serde = "1"
jsonwebtoken = "7.2.0"
chrono = "0.4"

[dependencies.argon2]
version = "0.3"
features = ["std"]

[dependencies.async-graphql]
version = "2.9"
features = [
	"uuid"
]

[dependencies.sqlx]
version = "0.5"
features = [
	"runtime-async-std-rustls", 
	"postgres",
	"uuid",
	"chrono",
	"time",
	"git2",
]

[dependencies.uuid]
version = "0.8"
features = [
	"serde",
	"v4"
]

[dependencies.git]
path = "../pine-git"
package = "pine-git"
