[package]
name = "pine-server"
version = "0.1.0"
authors = ["0al3x alex.vacan.bala@gmail.com"]
edition = "2021"

[dependencies]
actix-web = "3"
actix-cors = "0.5"
async-graphql-actix-web = "2.9"
env_logger = "0.8"
log = "0.4"
git2 = "0.14"
serde = "1"
jsonwebtoken = "7.2.0"
chrono = "0.4"
structopt = "0.3.25"

[dependencies.argon2]
version = "0.3"
features = ["std"]

[dependencies.async-graphql]
version = "2.9"
features = [
	"uuid"
]

[dependencies.sqlx]
version = "0.5"
features = [
	"runtime-async-std-rustls", 
	"postgres",
	"uuid",
	"chrono",
	"time",
]

[dependencies.uuid]
version = "0.8"
features = [
	"serde",
	"v4"
]

[dependencies.git]
path = "../pine-git"
package = "pine-git"


[dependencies.error]
path = "../pine-error"
package = "pine-error"
